--- a/style.css
+++ b/style.css
@@ -4,10 +4,26 @@ h3 {background-color: rgba(190, 174, 226, 0.2);}
 h4 {background-color: rgba(190, 174, 226, 0.1);}  */
 
 .lr { background-color: rgb(107, 63, 63)}
-.r { background-color: rgb(177, 63, 63)}
-.lg { background-color: rgb(73, 92, 45);}
-.g { background-color: rgb(122, 192, 11) }
-.b { background-color: rgb(129,154,255) }
+
+.r { 
+	background-color: rgb(219, 39, 39);
+	color: rgb(0, 0, 0);
+}
+
+.lg { 
+	background-color: rgb(73, 92, 45);
+}
+
+.g { 
+	background-color: rgb(147, 227, 18);
+	color: rgb(0, 0, 0);
+}
+
+.b { 
+	background-color: rgb(129,154,255); 
+	color: rgb(0, 0, 0);
+}
+
 .c { background-color: rgb(45, 168, 192) }
 .p { background-color: rgb(69, 50, 104)}
 .y { background-color: rgb(255, 255, 0)}
